[workspace]
resolver = "2"
members = ["pliron-derive", "pliron-llvm"]

[package]
name = "pliron"
description = "Programming Languages Intermediate RepresentatiON"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[workspace.package]
version = "0.3.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/vaivaswatha/pliron"
categories = ["compilers"]
keywords = ["pliron", "llvm", "mlir", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pliron-derive = { path = "./pliron-derive", version = "0" }

apint.workspace = true
slotmap = "1.0.7"
downcast-rs = "1.2.1"
rustc-hash.workspace = true
thiserror.workspace = true
linkme.workspace = true
once_cell = "1.19.0"
paste = "1.0"
combine.workspace = true
regex = "1.10.4"
dyn-clone = "1.0.17"

[dev-dependencies]
expect-test.workspace = true

[workspace.dependencies]
apint = "0.2.0"
assert_cmd = "2"
clap = { version = "4.5", features = ["derive"] }
expect-test = "1.5.0"
proc-macro2 = "1.0.84"
quote = "1.0.36"
prettyplease = "0.2.20"
rustc-hash = "1.0"
syn = { version = "2.0.66", features = ["derive"] }
combine = "4.6.7"
thiserror = "1.0.61"
linkme = "0.3"
tempfile = "3"