[workspace]
resolver = "2"
members = ["pliron-derive", "pliron-llvm"]

[package]
name = "pliron"
description = "Programming Languages Intermediate RepresentatiON"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[workspace.package]
version = "0.6.1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/vaivaswatha/pliron"
categories = ["compilers"]
keywords = ["pliron", "llvm", "mlir", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pliron-derive = { path = "./pliron-derive", version = "0" }

apint.workspace = true
slotmap = "1"
downcast-rs = "1"
rustc-hash.workspace = true
thiserror.workspace = true
linkme.workspace = true
combine.workspace = true
utf8-chars = "3"
regex = "1"
dyn-clone = "1"

[dev-dependencies]
expect-test.workspace = true

[workspace.dependencies]
apint = "0"
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
expect-test = "1"
proc-macro2 = "1"
quote = "1"
prettyplease = "0"
rustc-hash = "1"
syn = { version = "2", features = ["derive", "full", "parsing"] }
combine = "4"
thiserror = "1"
linkme = "0"
tempfile = "3"
