[workspace]
resolver = "2"
members = ["pliron-derive", "pliron-llvm", "pliron-llvm/llvm-opt"]

[package]
name = "pliron"
description = "Programming Languages Intermediate RepresentatiON"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/vaivaswatha/pliron"
categories = ["compilers"]
keywords = ["pliron", "llvm", "mlir", "compiler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pliron-derive = { path = "./pliron-derive", version = "0" }

awint.workspace = true
rustc_apfloat.workspace = true
slotmap = "1"
downcast-rs = "1"
rustc-hash.workspace = true
thiserror.workspace = true
linkme.workspace = true
combine.workspace = true
utf8-chars = "3"
regex = "1"
dyn-clone.workspace = true
log.workspace = true

[dev-dependencies]
expect-test.workspace = true

[workspace.dependencies]
awint = "0"
bitflags = "2"
rustc_apfloat = "0.2"
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
dyn-clone = "1"
expect-test = "1"
proc-macro2 = "1"
quote = "1"
prettyplease = "0"
rustc-hash = "1"
combine = "4"
thiserror = "1"
linkme = "0"
tempfile = "3"
log = "0"
env_logger = "0"
cargo-manifest = "0"