[package]
name = "pliron-derive"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
combine.workspace = true

[dev-dependencies]
prettyplease.workspace = true
expect-test.workspace = true
