[package]
name = "pliron-derive"
description = "LLVM Dialect for pliron"
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2", features = ["derive", "full", "parsing"] }
combine.workspace = true
rustc-hash.workspace = true
convert_case = "0"

[dev-dependencies]
prettyplease.workspace = true
expect-test.workspace = true
pliron = { path = "../" }
linkme.workspace = true
dyn-clone.workspace = true
