[package]
name = "pliron-llvm"
description = "LLVM dialect for pliron"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pliron = { path = "../", version = "0" }
combine.workspace = true
dyn-clone.workspace = true
thiserror.workspace = true
linkme.workspace = true
rustc-hash.workspace = true
llvm-sys = "201"
log.workspace = true
bitflags = { workspace = true, features = ["std"] }

[dev-dependencies]
expect-test.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
log = { workspace = true, features = ["release_max_level_warn"] }
env_logger = "0"
