[package]
name = "llvm-opt"
description = "llvm-opt tool for pliron"
readme = "README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pliron = { path = "../../", version = "0" }
pliron-llvm = { path = "../", version = "0" }
clap.workspace = true
llvm-sys = "201"
log = { workspace = true, features = ["release_max_level_warn"] }
env_logger = "0"
