[package]
name = "Ch2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0.56"

fraction = "0.15.0"

pliron = { version = "0.1.0", path = "../../../" }
pliron-derive = { version = "0.1.0", path = "../../../pliron-derive" }

# required pliron dependencies
inventory = "0.3.14"
paste = "1.0"
intertrait = "0.2.2"
linkme = "0.2"
